# blog-AI

./: .blog-ai.example.toml  .dockerignore  .env.example  .env.local.example  .env.production.example  .gitignore  .gitleaksignore  .pre-commit-config.yaml  .trivyignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  Dockerfile.prod  Makefile  PRD.md  README.md  SECURITY.md  TODO.md  blog.py  bun.lockb  docker-compose.deploy.yml  docker-compose.prod.yml  docker-compose.yml  eslint.config.mjs  instrumentation.ts  knip.json  make_book.py  make_mdx.py  makefile  middleware.ts  next.config.mjs  package-lock.json  package.json  playwright.config.ts  proxy.ts  (+17 more)
.claude/: plugin-settings.json  plugin-settings.schema.json  settings.local.json  settings.template.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
app/: HomePageClient.tsx  __init__.py  auth.py  dependencies.py  error.tsx  exceptions.py  global-error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx  providers.tsx  robots.ts  validators.py
backend/: Dockerfile  pyproject.toml  requirements.txt  server.py
backend/app/: dependencies.py  error_handlers.py
backend/app/auth/: api_key.py  clerk_jwt.py
backend/app/dependencies/: __init__.py  authorization.py  database.py
backend/app/middleware/: quota_check.py  rate_limit.py
backend/app/models/: requests.py  usage.py  validation.py
backend/app/routes/: __init__.py  analytics.py  batch.py  blog.py  book.py  brand_voice.py  bulk.py  chat.py  config.py  content.py  conversations.py  export.py  extension.py  fact_check.py  health.py  images.py  organizations.py  payments.py  remix.py  seo.py  social.py  sso.py  sso_admin.py  streaming.py  subscription.py  templates_marketing.py  tools.py  usage.py  webhooks.py  websocket.py  workflows.py  zapier.py
backend/app/storage/: conversations.py
backend/migrations/: 001_create_webhook_tables.sql
backend/src/: config.py  config_validator.py  db.py
backend/src/analytics/: performance_service.py  webhook_receiver.py
backend/src/auth/sso/: __init__.py  persistence.py  providers.py
backend/src/blog/: make_blog.py
backend/src/blog_sections/: __init__.py  conclusion_generator.py  faq_generator.py  introduction_generator.py
backend/src/book/: chapters.py  generation.py  make_book.py  sections.py
backend/src/brand/: __init__.py  storage.py
backend/src/chat/: chat_engine.py
backend/src/content/: version_service.py
backend/src/fact_checking/: __init__.py  claim_validator.py  fact_checker.py
backend/src/images/: image_generator.py
backend/src/integrations/: github.py  medium.py  wordpress.py
backend/src/organizations/: organization_service.py
backend/src/payments/: stripe_service.py  subscription_sync.py
backend/src/planning/: competitor_analysis.py  content_calendar.py  content_outline.py  topic_clusters.py
backend/src/post_processing/: file_saver.py  humanizer.py
backend/src/quality/: plagiarism_checker.py
backend/src/remix/: analyzer.py  service.py
backend/src/research/: __init__.py  research_store.py  source_quality.py  web_researcher.py
backend/src/seo/: content_optimizer.py  image_alt_text.py  meta_description.py  optimization_loop.py  serp_analyzer.py  structured_data.py
backend/src/social/: campaign_service.py  publisher.py  worker.py
backend/src/storage/: redis_client.py
backend/src/templates/: marketing_templates.py  template_engine.py
backend/src/text_generation/: core.py  streaming.py
backend/src/tools/: base.py  categories.py  registry.py
backend/src/types/: __init__.py  batch.py  content.py  images.py  knowledge.py  performance.py  planning.py  research.py  seo.py  social.py  webhooks.py
backend/src/usage/: __init__.py  limiter.py  quota_service.py
backend/src/utils/: __init__.py  cache.py
backend/src/webhooks/: __init__.py  webhook_service.py
backend/src/workflows/: __init__.py  workflow_engine.py  workflow_store.py
backend/tests/: conftest.py  run_all_tests.py  stripe_mock.py  test_api.py  test_auth_flows.py  test_brand_system.py  test_brand_voice.py  test_ci_smoke.py  test_error_handlers.py  test_fact_checking.py  test_feature_smoke.py  test_integration.py  test_middleware.py  test_organizations_integration.py  test_payment_flows.py  test_planning.py  test_quota_service.py  test_routes_analytics.py  test_routes_blog.py  test_routes_book.py  test_routes_export.py  test_routes_extension.py  test_routes_health.py  test_routes_images.py  test_routes_organizations.py  test_routes_payments.py  test_routes_sso.py  test_routes_usage.py  test_routes_webhooks.py  test_security_fixes.py  test_seo.py  test_seo_optimization_loop.py  test_source_quality.py  test_streaming.py  test_stripe_service.py  test_subscription_sync.py  test_text_generation.py  test_tools.py
chrome-extension/: README.md
components/: BookEditor.tsx  BookGenerator.tsx  BookViewer.tsx  ConnectionStatus.tsx  ContentEditor.tsx  ContentGenerator.tsx  ContentRating.tsx  ContentViewer.tsx  ConversationHistory.tsx  ErrorBoundary.tsx  ExportMenu.tsx  RequireAuth.tsx  SiteFooter.tsx  SiteHeader.tsx  SiteHeaderAuth.tsx  UsageIndicator.tsx
docs/: API.md  ARCHITECTURE-TIER1-FEATURES.md  COMPETITIVE-PARITY-EXECUTION-PLAN.md  COMPETITIVE-PARITY-GAP-SPRINT-BOARD.md  DATABASE.md  DEPLOYMENT.md  DEPLOYMENT_VERCEL_RAILWAY_NEON.md  ENVIRONMENT.md  MONITORING.md  RATE-LIMITING.md  REMEDIATION_PLAN.md  REPO_OPERATIONS.md  SCHEMA_AUDIT.md  STAGING_CHECKLIST.md  TIER2_ARCHITECTURE.md  TIER3_ARCHITECTURE.md  TIER_4_5_ARCHITECTURE.md
e2e/: analytics.spec.ts  blog-generation.spec.ts  brand-profiles.spec.ts  content-history.spec.ts  helpers.ts  navigation.spec.ts
examples/: README.md  async_demo.py  batch_demo.py  cache_demo.py  faq_demo.py  provider_comparison.py  sample_topics.txt
frontend/: .env.local.example  README.md  bun.lockb  next.config.mjs  package-lock.json  package.json  sentry.server.config.ts  tailwind.config.js  tsconfig.json
functions/: import_rss_feed.py
lib/: api.ts  (+8 more)
(+1021 files in other folders)
