[tool.poetry]
name = "blog-ai"
version = "0.1.0"
description = "AI-driven solution for generating blog posts and books"
authors = ["Lorenzo"]
license = "GNU General Public License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^2.15.0"
anthropic = "^0.76.0"
google-generativeai = "^0.3.1"
requests = "^2.31.0"
pydantic = "^2.5.2"
python-dotenv = "^1.0.0"
fastapi = "^0.109.2"
uvicorn = "^0.27.0"
websockets = "^12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
black = "^23.7.0"
isort = "^7.0.0"
mypy = "^1.5.1"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
