[tool.poetry]
name = "blog-ai"
version = "0.1.0"
description = "AI-driven solution for generating blog posts and books"
authors = ["Lorenzo"]
license = "GNU General Public License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^2.15.0"
anthropic = "^0.76.0"
google-generativeai = "^0.3.1"
requests = "^2.31.0"
pydantic = "^2.5.2"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"
fastapi = "^0.115.0"
uvicorn = "^0.27.0"
websockets = "^12.0"

# Image generation
stability-sdk = "^0.8.6"
Pillow = "^10.0.0"

# Security
bcrypt = "^5.0.0"
bleach = "^6.0.0"

# Redis for job storage
redis = "^5.0.0"

# Payment processing
stripe = "^7.0.0"

# Monitoring and error tracking
sentry-sdk = { version = "^1.40.0", extras = ["fastapi"] }

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^24.3.0"
isort = "^7.0.0"
mypy = "^1.5.1"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
