[tool.poetry]
name = "blog-ai"
version = "0.1.0"
description = "AI-driven solution for generating blog posts and books"
authors = ["Lorenzo"]
license = "GNU General Public License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^2.15.0"
anthropic = "^0.83.0"
google-generativeai = "^0.8.6"
requests = "^2.31.0"
pydantic = "^2.5.2"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"
fastapi = "^0.129.0"
uvicorn = "^0.41.0"
websockets = "^16.0"
python-multipart = "^0.0.22"
uvloop = { version = "^0.22.1", markers = "platform_system != 'Windows'" }

# Image generation
stability-sdk = "^0.8.6"
Pillow = "^12.1.1"

# Security
bcrypt = "^5.0.0"
nh3 = "^0.3.3"

# Redis for job storage
redis = "^7.2.0"

# Payment processing
stripe = "^14.3.0"

# Monitoring and error tracking
sentry-sdk = { version = "^2.53.0", extras = ["fastapi"] }

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^24.3.0"
isort = "^7.0.0"
mypy = "^1.5.1"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers --tb=short -q"
markers = [
    "security: marks tests as security-related",
    "slow: marks tests as slow-running",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
